Add configurable PF logs and vnStat bandwidth
